fix(formFields):overflow-fixed

--- a/src/components/DynamicForm/DynamicForm.module.css
+++ b/src/components/DynamicForm/DynamicForm.module.css
@@ -54,8 +54,6 @@
 }
 
 .formFields {
-  overflow: auto;
-  overflow-x: hidden;
   margin-top: 1rem;
   padding: 0.1rem;
   width: 100%;
