--- a/src/pages/app/EventPage/EventPage.module.css
+++ b/src/pages/app/EventPage/EventPage.module.css
@@ -135,7 +135,6 @@
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.04);
   background: rgba(255, 255, 255, 0.04);
-
   font-size: 1.05rem;
   padding: 0.75rem 1.5rem;
 
@@ -146,7 +145,6 @@
 
   margin: 1rem auto;
 
-  color: white;
   font-family: 'Inter', sans-serif;
   text-align: center;
   width: 100%;
